# audio_enhancer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cli.py  mkdocs.yml  pyproject.toml  requirements.txt
.docs/instructions/: RELEASE.md
.github/workflows/: ci.yml  docs.yml  publish.yml
audio_enhancer/: __init__.py  __main__.py  audio_exporter.py  audio_loader.py  cli.py  enhancer.py
audio_enhancer/noise_reduction/: base.py  impulse_noise.py  noise_synthesis.py  spectral_gating.py
audio_enhancer/normalization/: base.py  lufs.py  peak.py  rms.py
audio_enhancer/patterns/: behavioral.py  builder.py  factory.py  structural.py
audio_enhancer/reports/: __init__.py  base.py  config.py  frequency_spectrum.py  generator.py  spectrogram.py  utils.py  waveform.py
audio_enhancer/utils/: logger.py
docs/: changelog.md  cli.md  examples.md  index.md  installation.md  library.md  pipeline.md  quickstart.md  reports.md
docs/api/: enhancer.md  noise_reduction.md  normalization.md
examples/: basic_cli.py  batch_processing.py  custom_processor.py  demo.py  pipeline_builder.py  visual_reports.py
tests/: test_cli.py  test_noise_reduction.py  test_normalization.py  test_reports.py
