[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audioenhancer"
version = "0.1.0"
description = "A production-grade Python audio enhancement toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Diego Alejandro Botina", email = "support@codewithbotina.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy",
    "pydub",
    "librosa>=0.10.0",
    "soundfile",
    "noisereduce",
    "pyloudnorm",
    "ffmpeg-python",
    "pytest",
    "click",
    "matplotlib>=3.7.0"
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "pymdown-extensions>=10.0",
]

[project.scripts]
audioenhancer = "audio_enhancer.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "examples*"]
